# yandexgpt-python

./: .gitignore  pyproject.toml  setup.py
docs/source/: conf.py
yandex_gpt/: __init__.py  config_manager.py  thread.py  yandex_gpt.py
